Revert "Fix for Bug 6291, Cart printing truncated in Firefox"
see
http://bugs.koha-community.org/bugzilla3/show_bug.cgi?id=6291, comment 7, 9 and http://bugs.koha-community.org/bugzilla3/show_bug.cgi?id=7279

This reverts commit da0a5b2bd63027102dd61789fc455941e237abc9.

--- a/koha-tmpl/opac-tmpl/prog/en/css/print.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/print.css
@@ -17,7 +17,7 @@ body {
 	background-color : #FFF;
 	color : #333333;
 	font-family : arial, geneva, sans-serif;
-	font-size : 12px;
+	font-size : 14px;
 	margin : 0px 0px 0px 0px;
 }
 
@@ -98,8 +98,7 @@ table {
 	border-left : 0px solid #CCCCCC;
 	margin : 3px 0px 5px 0px;
 	padding : 0px;
-	width : 100%;
-	height : 100%;
+	width : 99%;
 }
 
 td {
@@ -108,8 +107,6 @@ td {
 	border-right : 1px solid #CCCCCC;
 	padding : 5px 5px 5px 5px;
 	vertical-align : top;
-	width : 100%;
-	height : 100%;
 }
 
 td:last-child {
@@ -126,8 +123,6 @@ th {
 	border-right : 1px solid #CCCCCC;
 	font-weight : bold;
 	padding : 5px 5px 5px 5px;
-	width: 100%;
-	height : 100%;
 }
 
 th:last-child {
